--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,14 @@ button {
 .section-hero {
   background-color: var(--navyblue);
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .section-hero-title {
