--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
   --slate: #434455;
   --ocean: #404bbf;
   --cornflower: #e7e9fc;
+  --light-slate: #8e8f99;
 }
 /* BASE STYLES */
 body {
@@ -265,9 +266,28 @@ button {
   list-style: none;
 }
 
+/* <!-- SECTION PRINCIPLES --> */
+
 .principles {
   display: flex;
   flex-wrap: wrap;
+}
+
+.rectangle {
+  width: 264px;
+  height: 112px;
+  display: block;
+  justify-content: center;
+  align-content: center;
+  flex-shrink: 0;
+  border-radius: 4px;
+  background-color: var(--cloud);
+  margin-bottom: 8px;
+}
+
+.advan-icon-list-item {
+  justify-content: center;
+  align-content: center;
 }
 
 .section-principles-title {
@@ -318,6 +338,40 @@ button {
 .plash-card {
   padding: 32px 0;
   text-align: center;
+}
+
+.ellipse {
+  padding: 12px;
+  border-radius: 40px;
+  color: var(--cloud);
+  background-color: var(--iris);
+}
+
+/* CUSTOMERS */
+
+.customers-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.customers-list-item {
+  color: var(--light-slate);
+  flex-basis: calc((100% - 5 * 88px) / 6);
+}
+
+.client {
+  color: var(--light-slate);
+  width: 168px;
+  height: 88px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid var(--lightslate, #8e8f99);
+  padding: 16px 32px;
+}
+
+.customers-list-item:hover {
+  color: var(--ocean);
 }
 
 /* FOOTER */
