--- a/css/style.css
+++ b/css/style.css
@@ -356,22 +356,25 @@ button {
 }
 
 .customers-list-item {
-  color: var(--light-slate);
+  fill: var(--light-slate);
   flex-basis: calc((100% - 5 * 88px) / 6);
-}
-
-.client {
-  color: var(--light-slate);
+  flex-shrink: 0;
   width: 168px;
   height: 88px;
-  flex-shrink: 0;
   border-radius: 4px;
   border: 1px solid var(--lightslate, #8e8f99);
   padding: 16px 32px;
+  cursor: pointer;
 }
 
-.customers-list-item:hover {
-  color: var(--ocean);
+.client {
+}
+
+.customers-list-item:hover,
+.customers-list-item:focus {
+  fill: var(--ocean);
+  border-radius: 4px;
+  border: 1px solid var(--ocean);
 }
 
 /* FOOTER */
