--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,7 @@ button {
   flex-shrink: 0;
   border-radius: 4px;
   background-color: var(--cloud);
+  padding: 24px 100px;
   margin-bottom: 8px;
 }
 
@@ -317,6 +318,8 @@ button {
   margin-bottom: 72px;
 }
 
+/* <!-- SECTION TEAM --> */
+
 .section-team {
   background-color: var(--cloud);
 }
@@ -340,11 +343,54 @@ button {
   text-align: center;
 }
 
-.ellipse {
-  padding: 12px;
-  border-radius: 40px;
-  color: var(--cloud);
+.social-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-top: 8px;
+}
+
+.social-list-item {
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-list-item-link {
+  width: 100%;
+  height: 100%;
   background-color: var(--iris);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-list-item-link:hover,
+.social-list-item-link:focus {
+  width: 100%;
+  height: 100%;
+  background-color: var(--ocean);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.ellipse {
+  fill: var(--cloud);
+  width: 16px;
+  height: 16px;
+  flex-shrink: 0;
 }
 
 /* CUSTOMERS */
