--- a/css/style.css
+++ b/css/style.css
@@ -414,9 +414,6 @@ button {
   cursor: pointer;
 }
 
-.client {
-}
-
 .customers-list-item:hover,
 .customers-list-item:focus {
   fill: var(--ocean);
@@ -566,8 +563,33 @@ footer .header-logo {
 }
 
 .project-card-list {
+  cursor: pointer;
+  display: flex;
+  width: 360px;
+  height: 420px;
+  padding-bottom: 0px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  flex-shrink: 0;
+  background: var(--white);
+
   flex-basis: calc((100% - 24px * 2) / 3);
   background: var(--white);
+}
+
+.project-card-link {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-card-list:hover,
+.project-card-list:focus {
+  border: 1px solid var(--cloud);
+  background: var(--white);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .card-content {
@@ -577,7 +599,7 @@ footer .header-logo {
   border-top: none;
 }
 
-.cadr-text {
+.card-text {
   color: --slate;
   line-height: 1.5;
   letter-spacing: 0.02em;
