--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,16 @@ button {
   padding: 24px 0;
 }
 
+.pages-list-item-link {
+  position: relative;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--navyblue);
+  padding: 24px 0;
+}
+
 .pages-list-item:hover,
 .pages-list-item:focus {
   color: var(--ocean);
@@ -153,6 +163,21 @@ button {
 .pages-list-item-link:hover,
 .pages-list-item-link:focus {
   color: var(--ocean);
+}
+
+.pages-list-item-link::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+}
+
+.pages-list-item-link.current::after {
+  background-color: var(--ocean);
 }
 
 /*  */
@@ -191,15 +216,6 @@ button {
 
 .gadget {
   flex-basis: calc((100% - 48px) / 3);
-}
-
-.pages-list-item-link {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--navyblue);
-  padding: 24px 0;
 }
 
 .header-address {
