--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
   --light-slate: #8e8f99;
   --green: #31d0aa;
   --naviblue-modal: rgba(46, 47, 66, 0.4);
+  --lightslate: #8e8f99;
 }
 /* BASE STYLES */
 body {
@@ -71,6 +72,8 @@ img {
 
 .header {
   border-bottom: 1px solid var(--cornflower);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 button {
@@ -86,14 +89,15 @@ button {
 /* LOGO */
 
 .header-logo {
+  color: var(--iris);
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--iris);
   margin-right: 76px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-logo-dark {
@@ -147,13 +151,13 @@ button {
 }
 
 .pages-list-item-link {
-  position: relative;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--navyblue);
+  color: var(--ocean);
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .pages-list-item:hover,
@@ -175,6 +179,12 @@ button {
   width: 100%;
   height: 4px;
   border-radius: 2px;
+  bottom: -1px;
+}
+
+.pages-list-item-link.current {
+  position: relative;
+  color: var(--ocean);
 }
 
 .pages-list-item-link.current::after {
@@ -229,6 +239,11 @@ button {
   letter-spacing: 0.02em;
   color: var(--slate);
   justify-content: space-between;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-address-list-item {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-address-list-item:hover,
@@ -236,7 +251,10 @@ button {
   color: var(--ocean);
 }
 
+/* <!-- SECTION HERO --> */
+
 .section-hero {
+  max-width: 1440px;
   background-color: var(--navyblue);
   padding: 188px 0;
   background-image: linear-gradient(
@@ -272,6 +290,7 @@ button {
   display: block;
   margin: 0 auto;
   min-width: 169px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-hero-button:hover,
@@ -294,7 +313,8 @@ button {
 .rectangle {
   width: 264px;
   height: 112px;
-  display: block;
+  display: flex;
+  align-items: center;
   justify-content: center;
   align-content: center;
   flex-shrink: 0;
@@ -420,22 +440,32 @@ button {
 }
 
 .customers-list-item {
-  fill: var(--light-slate);
-  flex-basis: calc((100% - 5 * 88px) / 6);
-  flex-shrink: 0;
-  width: 168px;
+  width: calc((100% - 120px) / 6);
   height: 88px;
-  border-radius: 4px;
-  border: 1px solid var(--lightslate, #8e8f99);
-  padding: 16px 32px;
-  cursor: pointer;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customers-list-item:hover,
-.customers-list-item:focus {
+.customers-link {
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--lightslate);
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: var(--light-slate);
+}
+
+.customers-link:hover,
+.customers-link:focus {
   fill: var(--ocean);
   border-radius: 4px;
   border: 1px solid var(--ocean);
+}
+
+.client {
+  color: currentColor;
 }
 
 /* FOOTER */
@@ -452,8 +482,10 @@ button {
 }
 
 .webstudio-footer {
-  display: block;
-  margin: 0;
+  margin-right: 120px;
+  margin-left: 0;
+  /* display: block;
+  margin: 0; */
 }
 
 .footer-text {
@@ -479,6 +511,7 @@ footer .header-logo {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--white);
+  margin-bottom: 16px;
 }
 
 .social-media-list {
@@ -495,6 +528,7 @@ footer .header-logo {
   height: 40px;
   flex-shrink: 0;
   fill: var(--iris);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-media-link-footer {
@@ -554,6 +588,10 @@ footer .header-logo {
   border-radius: 4px;
   border: 1px solid var(--cornflower);
   background: var(--cloud);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filters-button:hover,
@@ -609,8 +647,14 @@ footer .header-logo {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.project-card-link:hover,
+.project-card-link:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .project-card-link:hover .overlay {
-  transform: translateY(0);
+  transform: translateY(0%);
 }
 
 .portfolio-box {
@@ -638,10 +682,18 @@ footer .header-logo {
 }
 
 .overlay-text {
-  transform: translateY(100%);
-  color: var(--cloud);
+  position: absolute;
+  top: 0;
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: var(--cloud);
+  padding: 40px 32px;
+  background-color: var(--iris);
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-content {
@@ -689,6 +741,7 @@ footer .header-logo {
   background: var(--dairy, #fcfcfc);
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden .modal {
@@ -696,16 +749,6 @@ footer .header-logo {
 }
 
 .modal-btn {
-  /* position: absolute;
-  top: 24px;
-  right: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0;
-  background-color: transparent;
-  border: none; */
-
   background-color: var(--cornflower, #e7e9fc);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -728,8 +771,9 @@ footer .header-logo {
 
 .modal-btn:hover,
 .modal-btn:focus {
-  fill: var(--cornflower, #e7e9fc);
+  fill: var(--white);
   stroke-width: 1px;
   stroke: rgba(0, 0, 0, 0.1);
-  background-color: var(--iris);
+  background-color: var(--ocean);
+  border: none;
 }
