--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ button {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--ocean);
+  color: var(--navyblue);
   padding: 24px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -256,15 +256,17 @@ button {
 .section-hero {
   max-width: 1440px;
   background-color: var(--navyblue);
+  background-position: center center;
   padding: 188px 0;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/hero-bg.jpg);
+  background-position: center center;
   background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
+  margin: 0 auto;
 }
 
 .section-hero-title {
