--- a/css/style.css
+++ b/css/style.css
@@ -456,18 +456,20 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  fill: var(--light-slate);
+  color: var(--light-slate);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover,
 .customers-link:focus {
-  fill: var(--ocean);
+  color: var(--ocean);
   border-radius: 4px;
   border: 1px solid var(--ocean);
 }
 
 .client {
-  color: currentColor;
+  fill: currentColor;
 }
 
 /* FOOTER */
